syntax = "proto3";

package arkeo.arkeo;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "arkeo/arkeo/keeper.proto";

option go_package = "github.com/arkeonetwork/arkeo/x/arkeo/types";

message EventBondProvider {
  string creator = 1;
  string provider = 2 [ (gogoproto.casttype) = "github.com/arkeonetwork/arkeo/common.PubKey" ];
  string service = 3;
  string bond = 4 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

message EventModProvider {
  string creator = 1;
  string provider = 2 [ (gogoproto.casttype) = "github.com/arkeonetwork/arkeo/common.PubKey" ];
  string service = 3;
  string metadataURI = 4;
  uint64 metadataNonce = 5;
  ProviderStatus status = 6;
  int64 minContractDuration = 7;
  int64 maxContractDuration = 8;
  repeated cosmos.base.v1beta1.Coin subscriptionRate = 9 [ (gogoproto.nullable) = false ];
  repeated cosmos.base.v1beta1.Coin payAsYouGoRate = 10 [ (gogoproto.nullable) = false ];
  string bond = 11 [
    (cosmos_proto.scalar) = "cosmos.Int",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  int64 settlementDuration = 12;
}
